# yawc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  errors.rs  main.rs  utils.rs
src/handlers/: configure.rs  get.rs
src/providers/: mod.rs  openweather.rs  provider.rs  visualcrossing.rs  weather.rs  weatherapi.rs
test_dependencies/: config.json  visualcrossing_kyiv_2023-01-01.json  weatherapi_kyiv_2023-01-01.json
